--- a/Other-file/src/App.css
+++ b/Other-file/src/App.css
@@ -40,3 +40,33 @@
 .read-the-docs {
   color: #888;
 }
+
+/*My Css*/
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  margin: 10px 0;
+}
+
+button {
+  margin: 5px;
+}
